<resources>
    <string name="app_name">Bitacora Login</string>

    <string name="signed_in">Signed in!</string>
    <string name="signed_out">Signed out!</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>
    <string name="firebase_user_fmt">Bitacora User: %s</string>

    <string name="reparto_button">Repartos</string>

    <!-- Mostrar Repartos -->
    <string name="textDialogoRepartosTitulo">Repartos</string>
    <string name="headerNombreRepartidor">Repartidor</string>
    <string name="headerEmail">Email</string>
    <!-- <string name="headerFecha">Fecha</string> -->

    <string name="repartosText">Repartos</string>
    <string name="registrarIncidenciaText">Registrar incidencia</string>
    <!-- Dialogo Registrar incidencia -->
    <string name="txtDialogoRegistrarIncidenciaTitulo">Registrar incidencia</string>
    <string name="txtDialogoRegistrarIncidenciaPregunta">Se ha producido una incidencia. ¿Desea registrarla?</string>
    <string name="txtDialogoRegistrarIncidenciaAfirmativo">Sí</string>
    <string name="txtDialogoRegistrarIncidenciaNegativo">No</string>

    <string name="finalizarRepartoText">Finalizar reparto</string>
    <!-- Dialogo Finalizar reparto -->
    <string name="txtDialogoFinalizarRepartoTitulo">Finalizar reparto</string>
    <string name="txtDialogoFinalizarRepartoPregunta">¿Desea finalizar la entrega?</string>
    <string name="txtDialogoFinalizarRepartoAfirmativo">Sí</string>
    <string name="txtDialogoFinalizarRepartoNegativo">No</string>

    <!-- ListView Header -->
    <string name="tvTituloHeaderText">Título</string>
    <string name="tvDireccionHeaderText">Dirección</string>
    <string name="tvFechaRecepcionHeaderText">Fecha recepción</string>
    <string name="tvFechaEntregaHeaderText">Fecha entrega</string>
    <string name="tvLocalizacionHeaderText">Localización</string>
    <string name="tvEntregadoHeaderText">Entregado</string>

    <string name="detalleRepartoText">Detalle Reparto</string>

    <string name="incidenciaText">Registrar datos incidencia</string>
    <string name="tvObservaciones">Observaciones</string>
    <string name="hintObservaciones">Observaciones incidencia</string>
    <string name="btnIncidencia">Guardar</string>

    <string name="mostrarInicidenciasText">Mostrar incidencias</string>
    <string name="tvObservacionesHeaderText">Observaciones</string>
    <string name="tvFechaHeaderText">Fecha</string>

    <string name="actualizarLocalizacionRepartoRepartoText">Actualizar localización</string>
    <string name="tvLocalizacion">Nueva localización</string>
    <string name="hintLocalizacion">Localización reparto</string>
    <string name="btnLocalizacion">Guardar</string>

</resources>
