<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mostrarIncidencias"
        android:orderInCategory="100"
        android:title="@string/mostrarInicidenciasText"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/registrarIncidencia"
        android:orderInCategory="100"
        android:title="@string/registrarIncidenciaText"
        android:icon="@android:drawable/ic_menu_report_image"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/actualizarLocalizacionReparto"
        android:orderInCategory="100"
        android:title="@string/actualizarLocalizacionRepartoRepartoText"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/finalizarReparto"
        android:orderInCategory="100"
        android:title="@string/finalizarRepartoText"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom|withText" />

</menu>