<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocalizacionActivity">

    <LinearLayout
        android:id="@+id/filaLocalizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLocalizacion"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvLocalizacion"
            android:gravity="end" />

        <EditText
            android:id="@+id/localizacionEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:inputType="text"
            android:labelFor="@id/tvLocalizacion"
            android:hint="@string/hintLocalizacion"
            android:onClick="onClickActualizarLocalizacion"
            android:maxLines="1" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btnLocalizacion"
            android:onClick="onClickActualizarLocalizacion"
            android:src="@android:drawable/ic_menu_save" />
    </LinearLayout>

</LinearLayout>