<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IncidenciaActivity">

    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
 android:paddingBottom="@dimen/activity_vertical_margin"-->

    <LinearLayout
        android:id="@+id/filaIncidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvObservaciones"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvObservaciones"
            android:gravity="end" />

        <EditText
            android:id="@+id/observacionesEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:inputType="text"
            android:labelFor="@id/tvObservaciones"
            android:hint="@string/hintObservaciones"
            android:onClick="onClickCrearIncidencia"
            android:maxLines="1" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btnIncidencia"
            android:onClick="onClickCrearIncidencia"
            android:src="@android:drawable/ic_menu_save" />
    </LinearLayout>

</LinearLayout>